--- a/server/views/eligibility/excluded.pug
+++ b/server/views/eligibility/excluded.pug
@@ -6,11 +6,7 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/back
-
-        if Object.keys(errorObject).length !== 0
-            div.error-summary(role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1")
-                h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading-example-1
-                    | There are errors with your submission - see below
+        include ../includes/errorBanner
 
         div.pure-u-1-2
             h2.heading-large Is the offender statutorily excluded from HDC?
