--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -4,7 +4,7 @@ block excludedForm
 
     p Select one or more reasons why the offender is excluded:
         if errorObject.reason
-            span.error-message One or more reason must be selected for exclusion
+            span.error-message One or more reasons must be selected
     div.pure-g
         div.pure-u-10-24
             div.multiple-choice
