Updated id of correct address link

--- a/server/views/review/curfewAddress.pug
+++ b/server/views/review/curfewAddress.pug
@@ -28,4 +28,4 @@ block content
                 a#continueBtn.button.button-primary.smallMarginTop(href="/hdc/send/" + nomisId role="button")
                     | Continue
             else
-                a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Correct the errors before continuing
+                a#correctAddressLink(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Correct the errors before continuing
