--- a/server/views/review/licence.pug
+++ b/server/views/review/licence.pug
@@ -7,3 +7,6 @@ block content
     include includes/licenceSummary
 
     include ../includes/caseListReturn
+
+        if user.role === 'CA' && licenceStatus.decisions.approved
+            a#createPdf.requiredButton.button.smallMarginTop(href="/hdc/pdf/view/"+nomisId target="_blank" role="button") Create licence PDF
