--- a/server/views/review/includes/curfewAddress.pug
+++ b/server/views/review/includes/curfewAddress.pug
@@ -32,7 +32,10 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         span Main occupier details
     div.pure-u-1-2
         div.pure-g
-            if address.occupier
+            if typeof errors.occupier === 'string'
+                div.pure-u-1.pure-u-md-2-5
+                    span#occupierFull-error.alert.bold #{errors.occupier}
+            else if address.occupier
                 div.pure-u-1.pure-u-md-2-5
                     span#occupierName-curfew.bold #{address.occupier.name}
                     if errors.occupier && errors.occupier.name
