Added in place validation to address proposed question

--- a/server/views/proposedAddress/addressProposed.pug
+++ b/server/views/proposedAddress/addressProposed.pug
@@ -4,10 +4,13 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/back
+        include ../includes/errorBanner
 
         div.pure-u-1-2
             h2.heading-large Has the offender proposed a curfew address?
 
+    if errorObject.decision
+        p.error-message Please select an answer
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
