fixed bug with not showing relationship error

--- a/server/views/review/includes/curfewAddress.pug
+++ b/server/views/review/includes/curfewAddress.pug
@@ -62,7 +62,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
                             div.pure-u-1.pure-u-md-2-5
                                 +itemAndError(resident.name, errorObj.name, "residentName-curfew-" + index)
                             div.pure-u-1.pure-u-md-2-5
-                                +itemAndError(resident.relationship, errorObj.relation, "residentRelation-curfew-" + index)
+                                +itemAndError(resident.relationship, errorObj.relationship, "residentRelation-curfew-" + index)
                             div.pure-u-1.pure-u-md-1-5
                                 +itemAndError(resident.age, errorObj.age, "residentAge-curfew-" + index)
 
