--- a/server/views/licenceConditions/additionalConditions.pug
+++ b/server/views/licenceConditions/additionalConditions.pug
@@ -58,4 +58,5 @@ block content
 block append scripts
     script(src="/public/javascripts/datepicker.js")
     script(src="/public/javascripts/additionalConditionsClient.js?"+version)
+    script(src="/public/javascripts/bespokeConditionsClient.js?" + version)
 
