--- a/server/views/finalChecks/refuse.pug
+++ b/server/views/finalChecks/refuse.pug
@@ -18,10 +18,10 @@ block content
 
         div.largePaddingBottom.smallPaddingTop.form-group.paddingBottom
             div.multiple-choice
-                input#yes(type="radio" checked=decision==='No' name="decision" value="No")
+                input#yes(type="radio" checked=decision==='Yes' name="decision" value="Yes")
                 label(for="yes") Yes
             div.multiple-choice
-                input#no(type="radio" checked=decision==='Yes' name="decision" value="Yes")
+                input#no(type="radio" checked=decision==='No' name="decision" value="No")
                 label(for="no") No
 
         include ../includes/formSubmit
