updated text of exclusion reason

--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -16,7 +16,7 @@ block excludedForm
                     |  extended sentence
             div.multiple-choice
                 input(type='checkbox' name='reason[]' id='rotlFail' value='rotlFail' checked=vals.indexOf('rotlFail') !== -1)
-                label(for='rotlFail') Serving a sentence for ROTL fail to return, absconds and escapes
+                label(for='rotlFail') Serving sentence for ROTL fail to return
             div.multiple-choice
                 input(type='checkbox' name='reason[]' id='communityCurfew' value='communityCurfew' checked=vals.indexOf('communityCurfew') !== -1)
                 label(for='communityCurfew') Serving a sentence for breach of the curfew requirement of a
