--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -4,6 +4,7 @@ block content
     -var daysInAWeek = ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"]
 
     include ../includes/backToTaskList
+    include ../includes/personalDetailsSummary
 
     h2.heading-large Curfew hours
     h2.heading-medium.smallMarginTop First night curfew hours
