--- a/server/views/licenceConditions/additionalConditions.pug
+++ b/server/views/licenceConditions/additionalConditions.pug
@@ -10,6 +10,7 @@ block content
                 p Please correct the form where indicated below
 
     include ../includes/back
+    include ../includes/personalDetailsSummary
 
     h1.heading-large Additional conditions
 
