--- a/server/views/licenceConditions/conditionsSummary.pug
+++ b/server/views/licenceConditions/conditionsSummary.pug
@@ -4,6 +4,7 @@ include ../review/includes/additionalConditions
 block content
 
     include ../includes/back
+    include ../includes/personalDetailsSummary
 
     div.largePaddingBottom
         if data.licenceConditions && data.licenceConditions.length > 0
