--- a/server/views/licenceConditions/standard.pug
+++ b/server/views/licenceConditions/standard.pug
@@ -5,6 +5,7 @@ block content
     - var additionalConditionsValue = data.additionalConditionsRequired || null;
 
     include ../includes/backToTaskList
+    include ../includes/personalDetailsSummary
 
     h1.heading-large The standard conditions
 
