--- a/server/views/proposedAddress/bassReferral.pug
+++ b/server/views/proposedAddress/bassReferral.pug
@@ -4,6 +4,7 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/back
+        include ../includes/personalDetailsSummary
 
         div.pure-u-1-2
             h2.heading-large Has the offender requested a BASS referral?
