--- a/server/views/proposedAddress/curfewAddress.pug
+++ b/server/views/proposedAddress/curfewAddress.pug
@@ -5,6 +5,7 @@ block content
 
     div.pure-g.pure-u-1.borderBottom
         include ../includes/back
+        include ../includes/personalDetailsSummary
 
         h2.heading-large Proposed curfew address
 
