--- a/server/views/reporting/reportingInstructions.pug
+++ b/server/views/reporting/reportingInstructions.pug
@@ -3,6 +3,7 @@ extends ../layout
 block content
 
     include ../includes/backToTaskList
+    include ../includes/personalDetailsSummary
 
     h2.heading-large Reporting instructions
     p Enter the details of where the offender should report
