--- a/server/views/review/curfewHours.pug
+++ b/server/views/review/curfewHours.pug
@@ -1,9 +1,12 @@
 extends ../layout
 
 block content
-    -var hours = data.curfew.curfewHours
+    - var hours = data.curfew.curfewHours
+    - var personalDetails = data.personalDetails || {}
+
     div.largePaddingBottom
         include ../includes/backToCheckList
+        include ../includes/personalDetailsSummary
 
         h2.heading-large Proposed HDC curfew hours
 
