--- a/server/views/review/reporting.pug
+++ b/server/views/review/reporting.pug
@@ -4,8 +4,10 @@ include includes/additionalConditions
 block content
 
     - var reporting = data.reporting && data.reporting.reportingInstructions ? data.reporting.reportingInstructions : {}
+    - var personalDetails = data.personalDetails || {}
 
     include ../includes/backToCheckList
+    include ../includes/personalDetailsSummary
 
     h2.heading-large Reporting instructions
 
