--- a/server/views/send/index.pug
+++ b/server/views/send/index.pug
@@ -5,6 +5,7 @@ block content
     div.pure-g
         div.pure-u-1
             include ../includes/back
+            include ../includes/personalDetailsSummary
 
     div.largePaddingBottom
         if user.role == 'CA'
