--- a/server/views/curfew/addressSafety.pug
+++ b/server/views/curfew/addressSafety.pug
@@ -8,6 +8,7 @@ block content
     div.pure-g.pure-u-1
         div.borderBottomLight
             include ../includes/backToTaskList
+            include ../includes/personalDetailsSummary
 
             h2.heading-large Proposed address decision
 
