--- a/server/views/eligibility/excluded.pug
+++ b/server/views/eligibility/excluded.pug
@@ -6,6 +6,7 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/back
+        include ../includes/personalDetailsSummary
         include ../includes/errorBanner
 
         div.pure-u-1-2
