--- a/server/views/finalChecks/onRemand.pug
+++ b/server/views/finalChecks/onRemand.pug
@@ -6,6 +6,7 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/back
+        include ../includes/personalDetailsSummary
 
         div.pure-u-1-2
             h2.heading-large Is the offender currently on remand for another offence?
