--- a/server/views/finalChecks/refuse.pug
+++ b/server/views/finalChecks/refuse.pug
@@ -7,6 +7,7 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/backToTaskList
+        include ../includes/personalDetailsSummary
 
     h2.heading-large HDC refusal
 
