--- a/server/views/finalChecks/seriousOffence.pug
+++ b/server/views/finalChecks/seriousOffence.pug
@@ -6,6 +6,7 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/backToCheckList
+        include ../includes/personalDetailsSummary
 
         div.pure-u-2-3
             h2.heading-large Is the offender under investigation, or been charged, for a serious offence committed during the current sentence?
