--- a/server/views/proposedAddress/optOut.pug
+++ b/server/views/proposedAddress/optOut.pug
@@ -4,6 +4,7 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/back
+        include ../includes/personalDetailsSummary
         include ../includes/errorBanner
 
         div.pure-u-1-2
