--- a/server/views/risk/riskManagement.pug
+++ b/server/views/risk/riskManagement.pug
@@ -4,6 +4,7 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/backToTaskList
+        include ../includes/personalDetailsSummary
 
         h2.heading-large Risk management and victim liaison
 
