--- a/server/views/taskList/eligibilityTask.pug
+++ b/server/views/taskList/eligibilityTask.pug
@@ -9,6 +9,9 @@ div.largeMarginBottom
                     input(type="hidden" name="_csrf" value=csrfToken)
                     if prisonerInfo
                         input(type="hidden" name="nomisId" value=prisonerInfo.offenderNo || '')
+                        input(type="hidden" name="firstName" value=prisonerInfo.firstName || '')
+                        input(type="hidden" name="lastName" value=prisonerInfo.lastName || '')
+                        input(type="hidden" name="dateOfBirth" value=prisonerInfo.dateOfBirth || '')
                     input#eligibilityCheckStart.taskListAction.requiredButton.button(type="submit" value="Start")
 
     else
