Add PSS conditions

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -9,6 +9,9 @@
         if formItem === 'appointmentDetails'
             include appointmentDetails
 
+        if formItem === 'attendSampleDetails'
+            include attendSampleDetails
+
         if formItem === 'victimDetails'
             include victimDetails
 
