--- a/server/views/search/includes/searchErrors.pug
+++ b/server/views/search/includes/searchErrors.pug
@@ -1,4 +1,4 @@
-if Object.keys(errorObject).length !== 0
+if error
     div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
         h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading
-            | There are errors with your submission - see below
+            | #{error}
