--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
     if errors.length > 0
-        div.error-summary(role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1")
-            h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading-example-1
+        div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
+            h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading
                 | #{errors[0]}
 
     div.pure-g
