added a validation method for on rejection of address

--- a/server/views/review/includes/curfewAddress.pug
+++ b/server/views/review/includes/curfewAddress.pug
@@ -105,3 +105,4 @@ if licenceStatus.stage !== 'ELIGIBILITY'
                     span Could this offender be managed safely at address?
                 div.pure-u-1-2
                     +itemAndError(address.deemedSafe, errors.deemedSafe, "deemedSafe-curfew")
+                    +itemAndError('', errors.unsafeReason && 'Reason not provided', "unsafeReason-curfew")
