--- a/server/views/finalChecks/seriousOffence.pug
+++ b/server/views/finalChecks/seriousOffence.pug
@@ -9,7 +9,7 @@ block content
         include ../includes/personalDetailsSummary
 
         div.pure-u-2-3
-            h2.heading-large Is the offender under investigation, or been charged, for a serious offence committed during the current sentence?
+            h2.heading-large Has the offender been referred to the police or other law enforcement agency or to the independent adjudicator (IA) in relation to an alleged offence committed during the current sentence and the matter remains unresolved?
 
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
