--- a/server/views/review/curfewAddress.pug
+++ b/server/views/review/curfewAddress.pug
@@ -11,7 +11,7 @@ block content
             h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading-example-1
                 | There are unanswered questions - see below
 
-    h1.heading-large Licence details
+    h1.heading-large Proposed address
     div.largeMarginBottom
 
         include ../taskList/prisonerDetails
