LIC-367: Add additional conditions notice

--- a/assets/sass/additionalConditions.scss
+++ b/assets/sass/additionalConditions.scss
@@ -74,3 +74,13 @@
         padding: 30px 7px 0 7px;
     }
 }
+
+.notice-container {
+    box-sizing: border-box;
+    background-color: #FFF0D5;
+    padding: 1em;
+}
+
+.notice-container .notice strong {
+    padding-left: 875px;
+}
