--- a/server/views/licenceConditions/conditionsSummary.pug
+++ b/server/views/licenceConditions/conditionsSummary.pug
@@ -22,6 +22,17 @@ block content
         else
             |Add additional condition
 
+    if data.licenceConditions && data.licenceConditions.length > 0
+        div.pure-g
+            div.pure-u-1.pure-u-md-15-24
+                div.paddingBottom.smallPaddingTop
+                    div.notice-container
+                        div.notice
+                            i.icon.icon-important
+                                span.visually-hidden Warning
+                            strong.bold-small
+                                | Any additional conditions seleted must be reasonable and proportionate to manage the offender's risk
+
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
             a#continueBtn.requiredButton.button.smallMarginTop(href=nextPath.path + nomisId role="button") Save and return to task list
