--- a/server/views/taskList/taskList.pug
+++ b/server/views/taskList/taskList.pug
@@ -7,6 +7,9 @@ block content
 
     div.back-link-container
         a.link-back(href="/") Back to case list
+        if licenceStatus.decisions.excluded || licenceStatus.decisions.unsuitable
+            div.error-banner.marginTopMedium
+                strong.bold The offender is presumed unsuitable for HDC release
 
         h1.heading-large HDC release tasks
 
