--- a/server/views/taskList/taskList.pug
+++ b/server/views/taskList/taskList.pug
@@ -7,7 +7,11 @@ block content
 
     div.back-link-container
         a.link-back(href="/") Back to case list
-        if licenceStatus.decisions.excluded || licenceStatus.decisions.unsuitable
+
+        if licenceStatus.decisions.excluded
+            div.error-banner.marginTopMedium
+                strong.bold The offender is statutorily excluded from HDC
+        else if licenceStatus.decisions.unsuitable
             div.error-banner.marginTopMedium
                 strong.bold The offender is presumed unsuitable for HDC release
 
