--- a/server/views/taskList/eligibilityTask.pug
+++ b/server/views/taskList/eligibilityTask.pug
@@ -38,6 +38,13 @@ div.largeMarginBottom
                                         | Yes
                                     else
                                         | No
+                        if licenceStatus.decisions.exceptionalCircumstances
+                            div.pure-g.borderTopLight.smallPaddingTopBottom
+                                div.pure-u-3-4.padRight15
+                                    | Exceptional circumstances accepted?
+
+                                div#exceptionalCircumstances.pure-u-1-4.center.bold
+                                    | Yes
                         div.pure-g.borderTopLight.smallPaddingTopBottom
                             div.pure-u-3-4.padRight15
                                 | Is there less than 4 weeks to go to the offender's CRD?
