Allow access to approval task as long as not yet submitted to CA

--- a/server/views/taskList/approvalTask.pug
+++ b/server/views/taskList/approvalTask.pug
@@ -7,7 +7,7 @@ div.taskListItem.largeMarginBottom
             if (licenceStatus.decisions.refusalReason)
                 | : #{licenceStatus.decisions.refusalReason}
         div.pure-u-1-4
-            if licenceStatus.tasks.approval !== 'DONE'
+            if (licenceStatus.stage === 'APPROVAL')
                 +proceed(licenceStatus.tasks.approval, 'UNSTARTED', 'Continue', 'View', "/hdc/approval/release/" + prisonerInfo.offenderNo)
 
 
