Change nomis ID to Prison Number

--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -19,7 +19,7 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
                 span#prisonerName.block.bold #{prisonerInfo.lastName}, #{prisonerInfo.firstName}
 
         div.midMarginBottom
-            | NOMIS ID
+            | Prison Number
             if(prisonerInfo.offenderNo)
                 span#prisonerPrisonNumber.block.bold #{prisonerInfo.offenderNo}
 
