--- a/server/views/includes/personalDetailsSummary.pug
+++ b/server/views/includes/personalDetailsSummary.pug
@@ -4,7 +4,7 @@ if Object.keys(prisoner).length > 0
             li.padRight30 Name&nbsp;&nbsp;
                 span.bold #{prisoner.lastName}, #{prisoner.firstName}
 
-            li.padRight30.block NOMIS ID&nbsp;&nbsp;
+            li.padRight30.block Prison Number&nbsp;&nbsp;
                 span.bold #{nomisId}
 
             li.block Date of birth&nbsp;&nbsp;
